Fix home page footer spacing

--- a/home/home.css
+++ b/home/home.css
@@ -1,5 +1,6 @@
 .content {
 	flex-direction: row;
+	margin-bottom: 0;
 }
 
 .content > .left {
